# kafka-operator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  SECURITY.md  _pack.py  actions.yaml  charmcraft.yaml  config.md  config.yaml  config.yaml.bak  last_written_value  metadata.yaml  pyproject.toml  refresh_versions.toml  requirements.txt  spread.yaml  tempo.tf  tox.ini
.github/: .jira_sync_config.yaml  zizmor.yaml
.github/ISSUE_TEMPLATE/: BugReport.yml  FeatureRequest.yml
.github/workflows/: _build_charm_dev.yaml  automatic-doc-checks.yml  check_pr.yaml  ci.yaml  markdown-style-checks.yml  promote.yaml  release.yaml  sync-to-k8s.yml  sync_docs.yaml  sync_issue_to_jira.yaml  tiobe_scan.yaml  tutorial-tests.yaml  upstream-triage.yaml
common/: pyproject.toml
common/events/: refresh.py
common/single_kernel_kafka/: __init__.py  health.py  workload.py
common/single_kernel_kafka/core/: cluster.py  connect_models.py  literals.py  models.py  structured_config.py  workload.py
common/single_kernel_kafka/events/: actions.py  balancer.py  broker.py  controller.py  oauth.py  peer_cluster.py  provider.py  refresh.py  secrets.py  tls.py
common/single_kernel_kafka/events/connect/: base.py  kafka.py  provider.py  tls.py  upgrade.py  user_secrets.py
common/single_kernel_kafka/lib/v0/: client.py
common/single_kernel_kafka/managers/: auth.py  balancer.py  config.py  connect.py  connect_config.py  controller.py  k8s.py  tls.py
connect-k8s/: charmcraft.yaml
connect-k8s/src/: charm.py
connect-machine/: charmcraft.yaml  config.yaml
connect-machine/src/: charm.py
connect_k8s/: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
connect_k8s/src/: charm.py
connect_k8s/src/alert_rules/prometheus/: connect.rules
connect_k8s/terraform/: main.tf  variables.tf
connect_machine/: README.md  actions.yaml  charmcraft.yaml  metadata.yaml  pyproject.toml
connect_machine/src/: charm.py
connect_machine/src/alert_rules/prometheus/: connect.rules
connect_machine/terraform/: main.tf  outputs.tf  variables.tf
docs/: .custom_wordlist.txt  .gitignore  .mdformat.toml  Makefile  agents.md  conf.py  index.md  redirects.txt  requirements.txt
docs/_dev/: .pymarkdown.json  generate_charm_reference.py  generate_statuses.py  statuses-manual.yaml
docs/_static/: overwritelinks.js
docs/explanation/: backups.md  cluster-configuration.md  cryptography.md  e-cluster-configuration.md  e-configuration.md  e-cryptography.md  e-hardening.md  e-mirrormaker.md  e-security.md  e-trademarks.md  index.md  mirrormaker2-0.md  security.md  trademarks.md
docs/how-to/: back-up-and-restore.md  client-connections.md  create-mtls-client-credentials.md  enable-encryption.md  h-backup-restore-configuration.md  h-benchmark.md  h-cluster-migration.md  h-config-backup-restore.md  h-create-mTLS-credentials.md  h-create-mtls-client-credentials.md  h-deploy-aws.md  h-deploy-azure.md  h-deploy-ec2.md  h-deploy.md  h-enable-encryption.md  h-enable-monitoring.md  h-enable-oauth.md  h-integrate-alerts-dashboards.md  h-integrate-alerts.md  h-kafka-connect.md  h-kraft-mode.md  h-manage-app.md  h-manage-message-schemas.md  h-manage-topic-schemas.md  h-manage-units.md  h-upgrade.md  index.md  kafka-connect.md  kafka-ui.md  manage-applications.md  manage-message-schemas.md  manage-units.md  migrate-a-cluster.md  monitoring.md  oauth.md  schemas-serialisation.md  schemas-serialization.md  schemas.md  ssl-encryption.md  tls-encryption.md  (+2 more)
docs/reference/: apache-kafka-listeners.md  autogeneration-analysis.md  contact.md  file-system-paths.md  index.md  listeners.md  performance-tuning.md  r-contacts.md  r-file-system-path.md  r-file-system-paths.md  r-listeners.md  r-performance-tuning.md  r-requirements.md  r-snap-entrypoints.md  r-statuses.md  requirements.md  snap-commands.md  snap-entrypoints.md  statuses.md  terraform.md
docs/tutorial/: 1-introduction.md  2-set-up-the-environment.md  3-deploy-apache-kafka.md  4-integrate-with-client-applications.md  5-manage-passwords.md  6-enable-encryption.md  7-use-kafka-connect-for-etl.md  8-rebalance-and-reassign-partitions.md  9-cleanup-your-environment.md  cleanup.md  deploy.md  enable-encryption.md  environment.md  index.md  integrate-with-client-applications.md  introduction.inc  introduction.md  manage-passwords.md  rebalance-partitions.md  t-cleanup-environment.md  t-create-client-credentials.md  t-deploy-kafka.md  t-deploy.md  t-enable-encryption.md  t-kafka-connect.md  t-manage-passwords.md  t-overview.md  t-performace-tuning.md  t-reassign-partitions.md  t-relate-kafka.md  t-setup-environment.md  use-kafka-connect.md
k8s/: Makefile  charmcraft.yaml  config.yaml  pyproject.toml
k8s/src/: charm.py  events  managers  single_kernel_kafka
machine/: actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  refresh_versions.toml
machine/lib/charms/kafka/v0/: client.py
machine/src/: charm.py  core  events  managers
machine/terraform/: main.tf  versions.tf
src/: auth.py  charm.py  charm_config.py  config.py  connection_check.py  health.py  kafka_config.py  kafka_helpers.py  kafka_provider.py  kafka_provides.py  literals.py  provider.py  snap.py  structured_config.py  tls.py  upgrade.py  utils.py  vm_workload.py  workload.py
src/core/: cluster.py  config.py  literals.py  models.py  relation_interfaces.py  structured_config.py  workload.py
src/events/: actions.py  balancer.py  broker.py  controller.py  kafka.py  oauth.py  optimizer.py  partitioner.py  password_actions.py  peer_cluster.py  provider.py  refresh.py  registry.py  secrets.py  tls.py  upgrade.py  user_secrets.py  zookeeper.py
src/grafana_dashboards/: kafka-exporter-metrics.json  kafka-metrics-new.json  kafka-metrics.json  node-exporter-full.json
src/loki_alert_rules/: kafka_rate_limit.rule
src/managers/: auth.py  balancer.py  config.py  controller.py  cruisecontrol.py  ssl_principal_mapper.py  tls.py
src/new/: utils.py  (+1 more)
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/: __init__.py
(+322 files in other folders)
