# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
# TODO: check
name = "connect-operator"
version = "1.0"
description = "connect-operator"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ops = ">=2.17.0"
single_kernel_kafka = { git = "https://github.com/canonical/kafka-operator", branch = "main", subdirectory="common" }
kafkacl = { git = "https://github.com/canonical/kafkacl", branch = "pydantic-v2" }

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# data_platform_libs/v0/upgrade.py
# grafana_agent/v0/cos_agent.py requires pydantic <2
poetry-core = "*"
pydantic = ">=2"
# tls_certificates_interface/v1/tls_certificates.py
# tls_certificates lib uses a feature only available in cryptography >=42.0.5
cryptography = ">=42.0.5"
# hydra/v0/oauth.py
jsonschema = "*"
