# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.10"
ops = ">=2.17.0"
charmlibs-pathops = "^1.0.0"
charm-refresh = "^3.1.0.0"
cosl = ">= 0.0.5"
# TODO: This is required for bootstrap, it should be replaced by PyPi package.
single_kernel_kafka = { url = "https://custom-built-snaps.s3.eu-north-1.amazonaws.com/single_kernel_kafka-0.4.4-py3-none-any.whl" }

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
poetry-core = "*"
pydantic = "^2.11"
# tls_certificates_interface/v3/tls_certificates.py
cryptography = ">=42.0.5"
# hydra/v0/oauth.py
jsonschema = "*"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
pytest = ">=7.2"
coverage = { extras = ["toml"], version = ">7.0" }
pytest-mock = "^3.11.1"
packaging = "^24.1"
ops = { version = ">=2.17.0", extras = ["testing"] }

[tool.poetry.group.security]
optional = true

[tool.poetry.group.security.dependencies]
bandit = "^1.7.4"
safety = "^3.0.0"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest = ">=7.2"
juju = "^3.2.0"
coverage = { extras = ["toml"], version = ">7.0" }
pytest-operator = ">0.20"
kazoo = ">=2.8"
tenacity = ">=7.0"
pure-sasl = ">=0.5"
kafka-python = ">=2.0"
requests = ">2.25"
flaky = ">=3.0"
jubilant = ">=1.0.0"
toml = "^0.10.2"

[tool.poetry.group.build-refresh-version]
optional = true

[tool.poetry.group.build-refresh-version.dependencies]
charm-refresh-build-version = "^0.2.0"
