# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.10"
ops = ">=2.17.0"
charmlibs-pathops = "^1.0.0"
charm-refresh = "^3.1.0.0"
cosl = ">= 0.0.5"
single_kernel_kafka = { git = "https://github.com/canonical/kafka-operator", branch = "main", subdirectory="common" }

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
poetry-core = "*"
pydantic = "^2.11"
# tls_certificates_interface/v3/tls_certificates.py
cryptography = ">=42.0.5"
# hydra/v0/oauth.py
jsonschema = "*"

[tool.poetry.group.security]
optional = true

[tool.poetry.group.security.dependencies]
bandit = "^1.7.4"
safety = "^3.0.0"

[tool.poetry.group.build-refresh-version]
optional = true

[tool.poetry.group.build-refresh-version.dependencies]
charm-refresh-build-version = "^0.2.0"
