# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ops = ">=2.17.0"

# The cosl dep could be removed from here once PYDEPS is released:
# https://github.com/canonical/charmcraft/pull/1003
cosl = ">= 0.0.50"
charm-refresh = "^3.0.0.6"
toml = "^0.10.2"
# TODO: This is required for bootstrap, it should be replaced by PyPi package.
single_kernel_kafka = { url = "https://custom-built-snaps.s3.eu-north-1.amazonaws.com/single_kernel_kafka-0.4.4-py3-none-any.whl" }

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# grafana_agent/v0/cos_agent.py requires pydantic <2
poetry-core = "*"
pydantic = "^2.11"
# tls_certificates_interface/v3/tls_certificates.py
cryptography = ">=42.0.5"
# hydra/v0/oauth.py
jsonschema = "*"

[tool.poetry.group.unit.dependencies]
pytest = ">=7.2"
coverage = { extras = ["toml"], version = ">7.0" }
pytest-mock = "^3.11.1"
ops = { version = ">=2.17.0", extras = ["testing"] }

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest = ">=7.2"
juju = "^3.6.0.0"
coverage = { extras = ["toml"], version = ">7.0" }
pytest-operator = ">0.20"
tenacity = ">=7.0"
pure-sasl = ">=0.5"
kafka-python = ">=2.0"
requests = ">2.25"
flaky = ">=3.0"
jubilant = ">=1.0.0"

[tool.poetry.group.build-refresh-version]
optional = true

[tool.poetry.group.build-refresh-version.dependencies]
charm-refresh-build-version = "^0.2.0"
