# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ops = ">=2.17.0"

# The cosl dep could be removed from here once PYDEPS is released:
# https://github.com/canonical/charmcraft/pull/1003
cosl = ">= 0.0.50"
charm-refresh = "^3.0.0.6"
toml = "^0.10.2"
single_kernel_kafka = { git = "https://github.com/canonical/kafka-operator", branch = "main", subdirectory="common" }

[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# grafana_agent/v0/cos_agent.py requires pydantic <2
poetry-core = "*"
pydantic = "^2.11"
# tls_certificates_interface/v3/tls_certificates.py
cryptography = ">=42.0.5"
# hydra/v0/oauth.py
jsonschema = "*"

[tool.poetry.group.build-refresh-version]
optional = true

[tool.poetry.group.build-refresh-version.dependencies]
charm-refresh-build-version = "^0.2.0"
